test/errors/typecheck/return_count.ty
foo := func(n: number) -> number {
	if n == 0 {
		return
	}

	return n * foo(n - 1)
}